--- a/res/layout/register.xml
+++ b/res/layout/register.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="horizontal"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    
-        <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:text="Register Sensor" android:id="@+id/register" android:layout_marginLeft="50dip" android:layout_marginRight="50dip" android:layout_marginBottom="15dip"></Button>
+    android:layout_height="fill_parent"
+    android:orientation="horizontal" >
+
+    <Button
+        android:id="@+id/register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dip"
+        android:layout_marginLeft="50dip"
+        android:layout_marginRight="50dip"
+        android:text="@+string/register_sensor" >
+    </Button>
 
 </RelativeLayout>
