--- a/res/layout/sensor_type_spinner_item.xml
+++ b/res/layout/sensor_type_spinner_item.xml
@@ -2,20 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
-    android:padding="6dip">
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="0dip"
-        android:layout_weight="1"
-        android:layout_height="fill_parent">
-        <TextView
-            android:id="@+id/sensor_type_spinner_item"
-            android:layout_width="fill_parent"
-            android:layout_height="0dip"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:textStyle="bold"
-            android:textColor="#86C1EC"
-        />
-    </LinearLayout>
+    android:padding="6dip" >
+
+    <TextView
+        android:id="@+id/sensor_type_spinner_item"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:gravity="center_vertical"
+        android:textColor="#86C1EC"
+        android:textStyle="bold" />
+
 </LinearLayout>
