--- a/res/layout/usb_sensor_selection.xml
+++ b/res/layout/usb_sensor_selection.xml
@@ -17,10 +17,10 @@
 	<LinearLayout android:id="@+id/linearLayout1"
 		android:layout_height="wrap_content" android:layout_alignParentBottom="true"
 		android:layout_width="fill_parent">
-		<Button android:id="@+id/help_button"	
+		<Button android:id="@+id/help_button"
 			android:layout_width="0dip"
 			android:layout_height="wrap_content"
-			android:layout_weight="1" 
-			android:text="Help"></Button>
+			android:layout_weight="1"
+			android:text="@+string/help"></Button>
 	</LinearLayout>
 </RelativeLayout>
