--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:orientation="vertical"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent" android:gravity="center">
-    <TextView android:layout_width="wrap_content" android:layout_weight="2" android:layout_height="wrap_content" android:text="@string/empty" android:id="@+id/space0"></TextView>
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/launcherTitle" android:text="@string/app_name" android:textSize="48sp"></TextView>
-    <TextView android:layout_width="wrap_content" android:layout_weight="2" android:layout_height="wrap_content" android:text="@string/empty" android:id="@+id/space3"></TextView>
-    
-</LinearLayout>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+
+    <TextView
+        android:id="@+id/launcherTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/app_name"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="48sp" >
+    </TextView>
+
+</RelativeLayout>
