--- a/res/layout/register.xml
+++ b/res/layout/register.xml
@@ -2,16 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp" >
 
     <Button
         android:id="@+id/register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dip"
-        android:layout_marginLeft="50dip"
-        android:layout_marginRight="50dip"
-        android:text="@+string/register_sensor" >
+        android:layout_marginTop="5dp"
+        android:padding="20dp"
+        android:text="@+string/register_sensor"
+        android:textSize="21sp" >
     </Button>
 
 </RelativeLayout>
