--- a/res/layout/selection_help.xml
+++ b/res/layout/selection_help.xml
@@ -29,6 +29,7 @@
 	            android:layout_weight="1"
 	            android:singleLine="true"
 	            android:text="@+string/record_from_sensor"
+	            android:textSize="21sp"
 	        />
 	        <TextView
 	            android:layout_width="fill_parent"
@@ -36,6 +37,7 @@
 	            android:layout_weight="1"
 	            android:singleLine="true"
 	            android:text="@+string/update_metadata"
+	            android:textSize="21sp"
 	        />
 		</LinearLayout>
 	</TableRow>
@@ -58,6 +60,7 @@
 	            android:layout_weight="1"
 	            android:singleLine="true"
 	            android:text="@+string/sensor_out_of_range"
+	            android:textSize="21sp"
 	        />
 	        <TextView
 	            android:layout_width="fill_parent"
@@ -65,6 +68,7 @@
 	            android:layout_weight="1"
 	            android:singleLine="true"
 	            android:text="@+string/open_record"
+	            android:textSize="21sp"
 	        />
 	        <TextView
 	            android:layout_width="fill_parent"
@@ -72,6 +76,7 @@
 	            android:layout_weight="1"
 	            android:singleLine="true"
 	            android:text="@+string/update_metadata"
+	            android:textSize="21sp"
 	        />
 		</LinearLayout>
 	</TableRow>
@@ -94,6 +99,7 @@
 	            android:layout_weight="1"
 	            android:singleLine="true"
 	            android:text="@+string/register_sensor"
+	            android:textSize="21sp"
 	        />
 	        <TextView
 	            android:layout_width="fill_parent"
@@ -101,6 +107,7 @@
 	            android:layout_weight="1"
 	            android:singleLine="true"
 	            android:text="@+string/register"
+	            android:textSize="16sp"
 	        />
 	        <TextView
 	            android:layout_width="fill_parent"
@@ -108,6 +115,7 @@
 	            android:layout_weight="1"
 	            android:singleLine="true"
 	            android:text="@+string/update_metadata"
+	            android:textSize="21sp"
 	        />
 		</LinearLayout>
 	</TableRow>
@@ -130,6 +138,7 @@
 	            android:layout_weight="1"
 	            android:singleLine="true"
 	            android:text="@+string/new_device_in_range"
+	            android:textSize="21sp"
 	        />
 	        <TextView
 	            android:layout_width="fill_parent"
@@ -137,6 +146,7 @@
 	            android:layout_weight="1"
 	            android:singleLine="true"
 	            android:text="@+string/pair_device_with_phone"
+	            android:textSize="21sp"
 	        />
 	        <TextView
 	            android:layout_width="fill_parent"
@@ -144,6 +154,7 @@
 	            android:layout_weight="1"
 	            android:singleLine="true"
 	            android:text="@+string/long_click_no_action"
+	            android:textSize="21sp"
 	        />
 		</LinearLayout>
 	</TableRow>
@@ -166,6 +177,7 @@
 	            android:layout_weight="1"
 	            android:singleLine="true"
 	            android:text="@+string/not_a_sensor"
+	            android:textSize="21sp"
 	        />
 	        <TextView
 	            android:layout_width="fill_parent"
@@ -173,6 +185,7 @@
 	            android:layout_weight="1"
 	            android:singleLine="true"
 	            android:text="@+string/single_click_no_action"
+	            android:textSize="21sp"
 	        />
 	        <TextView
 	            android:layout_width="fill_parent"
@@ -180,6 +193,7 @@
 	            android:layout_weight="1"
 	            android:singleLine="true"
 	            android:text="@+string/update_metadata"
+	            android:textSize="21sp"
 	        />
 		</LinearLayout>
 	</TableRow>
