--- a/res/layout/selector_item.xml
+++ b/res/layout/selector_item.xml
@@ -11,11 +11,11 @@
         <TextView
             android:id="@+id/name_text"
             android:layout_width="fill_parent"
-            android:layout_height="0dip"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:textStyle="bold"
             android:textColor="#86C1EC"
+            android:textSize="21sp"
         />
     </LinearLayout>
     <ImageView
