--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -2,12 +2,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
+	<ImageView
+	    	android:id="@+id/sensorsImage"
+	        android:src="@drawable/sensors"
+	        android:layout_width="256dip"
+	        android:layout_height="256dip"
+	        android:layout_centerHorizontal="true"
+	        android:layout_above="@+id/launcherTitle"
+	        android:layout_marginBottom="20dip" />
 
     <TextView
         android:id="@+id/launcherTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="40dip"
         android:text="@string/app_name"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="48sp" >
