Fix db cursor query and string values

--- a/sensorsframework_app/src/main/res/layout/sensor_selection.xml
+++ b/sensorsframework_app/src/main/res/layout/sensor_selection.xml
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:padding="20dp"
-            android:text="@+string/help"
+            android:text="@string/help"
             android:textSize="21sp" >
         </Button>
     </LinearLayout>
