--- a/sensorsframework_app/src/main/res/layout/add_sensor.xml
+++ b/sensorsframework_app/src/main/res/layout/add_sensor.xml
@@ -12,7 +12,7 @@
         android:onClick="addUSBAction"
         android:layout_marginTop="5dp"
         android:padding="20dp"
-        android:text="@+string/add_usb_device"
+        android:text="@string/add_usb_device"
         android:textSize="21sp" />
 
     <Button
@@ -21,7 +21,7 @@
         android:onClick="addBluetoothAction"
         android:layout_marginTop="5dp"
         android:padding="20dp"
-        android:text="@+string/add_bluetooth_device"
+        android:text="@string/add_bluetooth_device"
         android:textSize="21sp" />
 
 </LinearLayout>
