--- a/sensorsframework_app/src/main/res/layout/register.xml
+++ b/sensorsframework_app/src/main/res/layout/register.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:padding="20dp"
-        android:text="@+string/register_sensor"
+        android:text="@string/register_sensor"
         android:textSize="21sp" >
     </Button>
 
