--- a/sensorsframework_app/src/main/res/layout/selection_help.xml
+++ b/sensorsframework_app/src/main/res/layout/selection_help.xml
@@ -21,14 +21,14 @@
 	            android:layout_height="0dip"
 	            android:layout_weight="1"
 	            android:singleLine="true"
-	            android:text="@+string/sensor_ready"
+	            android:text="@string/sensor_ready"
 	        />
 	        <TextView
 	            android:layout_width="fill_parent"
 	            android:layout_height="0dip"
 	            android:layout_weight="1"
 	            android:singleLine="true"
-	            android:text="@+string/record_from_sensor"
+	            android:text="@string/record_from_sensor"
 	            android:textSize="21sp"
 	        />
 	        <TextView
@@ -36,7 +36,7 @@
 	            android:layout_height="0dip"
 	            android:layout_weight="1"
 	            android:singleLine="true"
-	            android:text="@+string/update_metadata"
+	            android:text="@string/update_metadata"
 	            android:textSize="21sp"
 	        />
 		</LinearLayout>
@@ -59,7 +59,7 @@
 	            android:layout_height="0dip"
 	            android:layout_weight="1"
 	            android:singleLine="true"
-	            android:text="@+string/sensor_out_of_range"
+	            android:text="@string/sensor_out_of_range"
 	            android:textSize="21sp"
 	        />
 	        <TextView
@@ -67,7 +67,7 @@
 	            android:layout_height="0dip"
 	            android:layout_weight="1"
 	            android:singleLine="true"
-	            android:text="@+string/open_record"
+	            android:text="@string/open_record"
 	            android:textSize="21sp"
 	        />
 	        <TextView
@@ -75,7 +75,7 @@
 	            android:layout_height="0dip"
 	            android:layout_weight="1"
 	            android:singleLine="true"
-	            android:text="@+string/update_metadata"
+	            android:text="@string/update_metadata"
 	            android:textSize="21sp"
 	        />
 		</LinearLayout>
@@ -98,7 +98,7 @@
 	            android:layout_height="0dip"
 	            android:layout_weight="1"
 	            android:singleLine="true"
-	            android:text="@+string/register_sensor"
+	            android:text="@string/register_sensor"
 	            android:textSize="21sp"
 	        />
 	        <TextView
@@ -106,7 +106,7 @@
 	            android:layout_height="0dip"
 	            android:layout_weight="1"
 	            android:singleLine="true"
-	            android:text="@+string/register"
+	            android:text="@string/register"
 	            android:textSize="16sp"
 	        />
 	        <TextView
@@ -114,7 +114,7 @@
 	            android:layout_height="0dip"
 	            android:layout_weight="1"
 	            android:singleLine="true"
-	            android:text="@+string/update_metadata"
+	            android:text="@string/update_metadata"
 	            android:textSize="21sp"
 	        />
 		</LinearLayout>
@@ -145,7 +145,7 @@
 	            android:layout_height="0dip"
 	            android:layout_weight="1"
 	            android:singleLine="true"
-	            android:text="@+string/pair_device_with_phone"
+	            android:text="@string/pair_device_with_phone"
 	            android:textSize="21sp"
 	        />
 	        <TextView
@@ -153,7 +153,7 @@
 	            android:layout_height="0dip"
 	            android:layout_weight="1"
 	            android:singleLine="true"
-	            android:text="@+string/long_click_no_action"
+	            android:text="@string/long_click_no_action"
 	            android:textSize="21sp"
 	        />
 		</LinearLayout>
@@ -176,7 +176,7 @@
 	            android:layout_height="0dip"
 	            android:layout_weight="1"
 	            android:singleLine="true"
-	            android:text="@+string/not_a_sensor"
+	            android:text="@string/not_a_sensor"
 	            android:textSize="21sp"
 	        />
 	        <TextView
@@ -184,7 +184,7 @@
 	            android:layout_height="0dip"
 	            android:layout_weight="1"
 	            android:singleLine="true"
-	            android:text="@+string/single_click_no_action"
+	            android:text="@string/single_click_no_action"
 	            android:textSize="21sp"
 	        />
 	        <TextView
@@ -192,7 +192,7 @@
 	            android:layout_height="0dip"
 	            android:layout_weight="1"
 	            android:singleLine="true"
-	            android:text="@+string/update_metadata"
+	            android:text="@string/update_metadata"
 	            android:textSize="21sp"
 	        />
 		</LinearLayout>
