--- a/sensorsframework_app/src/main/res/layout/usb_sensor_selection.xml
+++ b/sensorsframework_app/src/main/res/layout/usb_sensor_selection.xml
@@ -33,7 +33,7 @@
             android:layout_weight="1"
 	        android:layout_marginTop="5dp"
     	    android:padding="20dp"
-            android:text="@+string/help"
+            android:text="@string/help"
             android:textSize="21sp" >
         </Button>
     </LinearLayout>
